Ajouter un alignement à gauche pour les blocs de texte dans les requêtes média pour améliorer la lisibilité sur les écrans plus petits

--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,10 @@ body {
 
 /* --- Media Queries pour le Responsif --- */
 @media screen and (max-width: 992px) {
+    .text-block {
+        text-align: left;
+    }
+
     .header-container {
         flex-direction: row;
         justify-content: space-between;
