--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,7 @@ body {
         display: block;
         color: var(--text-color);
         background: var(--header-bg);
+        border: none;
     }
 
     /* Le bouton "Prendre RDV" sur desktop est caché */
@@ -460,7 +461,7 @@ body {
     }
 
     .logo img {
-        height: 80px;
+        height: 60px;
     }
 }
 
