Ajouter une icône de feuille centrée et ajuster le style pour améliorer la présentation dans la section de texte.

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,12 @@ body {
     height: auto;
 }
 
+.fa-solid.fa-leaf {
+    display: block;
+    margin: 15px auto;
+    font-size: 1.5em;
+}
+
 .icon-text {
     display: flex;
     align-items: center;
