--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,16 @@
 
 /* Styles de base */
 body {
-    font-family: Georgia, serif;
+    font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
     background-color: var(--main-bg-color);
     color: var(--text-color);
+}
+
+.mobile-only {
+    display: none;
 }
 
 .section-container,
@@ -103,6 +107,14 @@ body {
     text-transform: uppercase;
 }
 
+.buttons-container {
+    display: flex;
+    justify-content: left;
+    gap: 20px;
+    margin-top: 40px;
+    /* Augmente la marge supérieure pour les descendre */
+}
+
 .main-nav .active-link {
     color: var(--active-link-color);
     font-weight: bold;
@@ -139,7 +151,7 @@ body {
 
 .psychotherapy-section .text-content {
     flex: 1;
-    text-align: justify;
+    text-align: left;
 }
 
 .psychotherapy-section .image-content {
@@ -154,7 +166,7 @@ body {
 .fa-solid.fa-leaf {
     display: block;
     margin: 15px auto;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 .icon-text {
@@ -280,12 +292,27 @@ body {
     gap: 4em;
 }
 
+.accompagnements-section .section-container .paragraph {
+    text-align: center;
+    max-width: 800px;
+    margin: 30px auto;
+    font-size: 1.3em;
+    font-weight: lighter;
+}
+
 .page-title {
     font-size: 2em;
     color: var(--text-color);
     margin-bottom: auto;
     text-align: center;
     text-transform: uppercase;
+}
+
+.page-subtitle {
+    text-align: left;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: lighter;
+    font-size: 1.7em;
 }
 
 .content-image-layout {
@@ -384,6 +411,10 @@ body {
         display: none;
     }
 
+    .mobile-only {
+        display: block;
+    }
+
     .img-mobile {
         display: none;
     }
@@ -436,6 +467,12 @@ body {
     .content-image-layout {
         flex-direction: column;
         gap: 1em;
+    }
+
+    .accompagnements-section .section-container .paragraph {
+        margin: auto auto;
+        font-size: 1.2em;
+        font-weight: lighter;
     }
 
     .footer-container {
