Modifier le poids de la police pour le titre de la page afin d'améliorer la lisibilité

--- a/css/style.css
+++ b/css/style.css
@@ -498,6 +498,7 @@ body {
     .page-title {
         font-size: 1.7em;
         margin: auto;
+        font-weight: lighter;
     }
 
     .about-image img {
