--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
     padding: 0;
     background-color: var(--main-bg-color);
     color: var(--text-color);
+    font-weight: lighter;
 }
 
 .mobile-only {
